[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Level/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/VIKING-N.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
level = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = -295.0
margin_top = 157.0
margin_right = 307.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Warden, welcome to the Temple of Seasons."
align = 1

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_top = 269.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 2 )
text = "Please ensure the world that the flow of time continues."
align = 1

[node name="TweenFirst" type="Tween" parent="."]

[node name="TweenSecond" type="Tween" parent="."]

[node name="TweenFinal" type="Tween" parent="."]
[connection signal="tween_completed" from="TweenFirst" to="." method="_on_TweenFirst_tween_completed"]
[connection signal="tween_completed" from="TweenSecond" to="." method="_on_TweenSecond_tween_completed"]
[connection signal="tween_completed" from="TweenFinal" to="." method="_on_TweenFinal_tween_completed"]
